<resources>
	<string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">Your Key</string>

	<string name="app_name">UI_ANIM</string>
	<string name="finish">FINISH</string>
	<string name="menu_settings">Settings</string>

	<!--Dialog-->
	<string name="dialog_title">Insert link</string>
	<string name="dialog_edit_hint">http(s)://</string>
	<string name="dialog_button_ok">OK</string>
	<string name="dialog_button_cancel">Cancel</string>

	<string name="menu_undo">undo</string>
	<string name="menu_redo">redo</string>

	<!-- CreditCardView -->
	<string name="card_num_hint">XXXX XXXX XXXX XXXX</string>
	<string name="card_holder">CARD HOLDER</string>
	<string name="expiry">EXPIRY</string>
	<string name="next">NEXT</string>
	<string name="previous">PREVIOUS</string>
	<string name="done">DONE</string>
	<string name="card_holder_sample">JOHN MATTHEW</string>
	<string name="expiry_sample">MM/YY</string>

	<string name="method1_dialog">Method1: Dialog</string>
	<string name="method2_decor">Method2: Decor</string>

	<string name="account_online">online</string>

	<string name="content">erewrowuo4382420482wrowuo4382420482 \n wo4u32o840wrowuo43824204822384 \n 20480284wourownro;equw24uo</string>
	
	<string name="long_text">The rules of English grammar require that in most cases a noun, or more generally a noun phrase, must be "completed" with a determiner to clarify what the referent of the noun phrase is.[1] The most common determiners are the articles the and a(n), which specify the presence or absence of definiteness of the noun. Other possible determiners include words like this, my, each and many – see English determiners. There are also cases where no determiner is required, as in the sentence John likes fast cars.

The definite article the is used when the referent of the noun phrase is assumed to be unique or known from the context. For example, in the sentence The boy with glasses was looking at the moon, it is assumed that in the context the reference can only be to one boy and one moon. However, the definite article is not used:

with generic nouns (plural or uncountable): cars have accelerators, happiness is contagious, referring to cars in general and happiness in general (compare the happiness I felt yesterday, specifying particular happiness);
with many proper names: John, France, London, etc.
The indefinite article a (before a consonant sound) or an (before a vowel sound) is used only with singular, countable nouns. It indicates that the referent of the noun phrase is one unspecified member of a class. For example, the sentence An ugly man was smoking a pipe does not refer to any specifically known ugly man or pipe.
When referring to a particular date, the definite article the is typically used[2].
He was born on the 10th of May.
However, when referring to a day of the week, the indefinite article is used.He was born on a Thursday.
        No article is used with plural or uncountable nouns when the referent is indefinite (just as in the generic definite case described above). However, in such situations, the determiner some is often added (or any in negative contexts and in many questions). For example:
        There are apples in the kitchen or There are some apples in the kitchen;
We do not have information or We do not have any information;
Would you like tea? or Would you like some tea? and Would you like any tea? or Would you like some good tea?
Additionally, articles are not normally used:</string>
    <string name="terms_and_acknowledge">Terms and Acknowledge</string>
    <string name="txt_index">Index</string>
	<string name="txt_travel">Travel</string>
	<string name="txt_offers">Offers</string>
	<string name="txt_details">Details</string>
    <string name="txt_launch_dialog">launch dialog</string>
    <string name="loc_old_toronto">43.6434476,-79.3831327</string>
	<string name="loc_m">43.6077226,-79.6005062</string>
	<string name="loc_cal">51.0522336,-114.05637</string>

	<string name="base_url">https://maps.googleapis.com/maps/api/</string>
    <string name="google_map_in_fragment">Google map in Fragment</string>
	<string name="to_fragment">To Fragment</string>
    <string name="txt_home">Home</string>
	<string name="txt_pets">Pets</string>
	<string name="how_to">How to pay through online banking</string>
	<string name="tap_for_more_options">Tap for more options</string>
    <string name="to_sample">To Sample</string>
	<string name="home">Home</string>
	<string name="pets">Pets</string>

	<string name="text_focused">Focused</string>
	<string name="text_other">Other</string>

</resources>
