<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="bottom"
              android:background="#80bebebe"
              tools:context="com.six.ui.action_sheet.ActionSheetDialog">

    <TextView android:background="@android:color/white" android:text="@string/dialog_title" android:gravity="center"
        android:layout_width="match_parent" android:layout_height="60dp"/>
    <View android:layout_width="match_parent" android:layout_height="1dp"
          android:background="@color/blue_200"/>
    <TextView android:background="@android:color/white" android:text="@string/menu_settings" android:gravity="center"
        android:layout_width="match_parent" android:layout_height="60dp"/>
    <View android:layout_width="match_parent" android:layout_height="1dp"
          android:background="@color/blue_200"/>
    <TextView android:background="@android:color/white" android:text="@string/dialog_button_cancel" android:gravity="center"
        android:layout_width="match_parent" android:layout_height="60dp"/>
</LinearLayout>